gccida/c2/build_complex_type
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/build_complex_type/src/tree.c:4529:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v5; // r15 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/build_complex_type/src/tree.c:4546:33: error: expected expression
if ( !v4 || ( v5 = ( tree_node *)*( ( _QWORD *)v4 + 1)) == 0LL ) 
                                ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/build_complex_type/src/tree.c:4546:22: error: use of undeclared identifier 'tree_node'
if ( !v4 || ( v5 = ( tree_node *)*( ( _QWORD *)v4 + 1)) == 0LL ) 
                     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/build_complex_type/src/tree.c:4566:22: error: use of undeclared identifier 'unk_71B26A'
v7 = ( const char *)&unk_71B26A; 
                     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/build_complex_type/src/tree.c:4571:22: error: use of undeclared identifier 'unk_71B27E'
v7 = ( const char *)&unk_71B27E; 
                     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/build_complex_type/src/tree.c:4576:22: error: use of undeclared identifier 'unk_71B294'
v7 = ( const char *)&unk_71B294; 
                     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/build_complex_type/src/tree.c:4581:22: error: use of undeclared identifier 'unk_71B2A6'
v7 = ( const char *)&unk_71B2A6; 
                     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/build_complex_type/src/tree.c:4611:22: error: use of undeclared identifier 'unk_71B317'
v7 = ( const char *)&unk_71B317; 
                     ^
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/build_complex_type/src/obj/tree.o] Error 1
